--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
     <title>Hotel El Escondido</title>
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Asap:wght@400;500;600;700&family=Flamenco:wght@300;400&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed:300,400&amp;display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Raleway:700,800&amp;display=swap" rel="stylesheet">
     <!-- CSS only -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
     <!--  Mi css Original! -->
@@ -49,23 +51,24 @@
         </nav>
     </header>
     <main>
-        <div class="margen"></div>
+        <!-- <div class="margen"></div> -->
         <section class="index">
+            <h1>el escondido el lujo de descansar</h1>
+            <div class="index__div--img"><img src="./Multimedia/Imagenes/index.jpg" alt="Hotel El Escondido"></div>
             <p class="index__p--prim"><b>El Escondido</b> es un hotel en la montaña, de diseño moderno y
                 elegante. Ubicado en Villa la
                 Angostura, es el lugar perfecto para parejas y familias que buscan descansar en una tierra
                 misteriosa y mágica, con comodidad y servicio de excelencia. Nuestros espacios están diseñados para
                 vivir una experiencia única tanto en amplias y cómodas habitaciones como en nuestras suites de lujo.
             </p>
-            <img src="./Multimedia/Imagenes/Galeria/Casa-S-2.jpg" alt="Hotel El Escondido">
-            <div><iframe width="440" height="247.5" src="https://www.youtube.com/embed/06QTUx4_yqk" frameborder="0"
+            <div class="index__div--iframe"><iframe width="440" height="247.5" src="https://www.youtube.com/embed/06QTUx4_yqk" frameborder="0"
                     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                     allowfullscreen></iframe></div>
             <p class="index__p--segu">Esto se complementa con nuestros servicios: sala de juegos con billar, ping
                 pong y salón para eventos, spa con tratamientos relajantes, pileta, espacio al aire libre un
                 gimnasio de última generación con hidromasaje y sauna seco. Ademas de una exquisita oferta
                 gastronómica en nuestros dos restaurantes, donde se puede disfrutar de la mejor combinación de
-                comidas típicas y cocina de autor..</p>
+                comidas típicas y cocina de autor.</p>
         </section>
     </main>
     <footer class="footer">
@@ -78,10 +81,10 @@
         <p class="footer__p"><b>Hotel El Escondido</b></p>
         <address>
             <ul>
-                <li><b>Email:</b> attcliente@elescondido.com</li>
-                <li><b>Telefono:</b> 0294 449-5028</li>
-                <li><b>WhastsApp:</b> 294 6855342</li>
-                <li><b>Direccion:</b> Ruta 98 km 23, Villa la Angostura</li>
+                <li><b>Email:</b><a href=""> attcliente@elescondido.com</a></li>
+                <li><b>Telefono:</b><a href=""> 0294 449-5028</a></li>
+                <li><b>WhastsApp:</b><a href=""> 294 6855342</a></li>
+                <li><b>Direccion:</b>Ruta 98 km 23, Villa la Angostura</li>
             </ul>
         </address>
         <form class="footer__form" action="">
