--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -54,7 +54,7 @@
             <section class="contacto__add">
                 <address>
                     <ul>
-                        <li><b>Email:</b> ejemplo@gmail.com</li>
+                        <li><b>Email:</b> attcliente@elescondido.com</li>
                         <li><b>Telefono:</b> 0294 449-5028</li>
                         <li><b>WhastsApp:</b> 294 6855342</li>
                         <li><b>Direccion:</b> Ruta 98 km 23, Villa la Angostura</li>
