--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                 pong y salón para eventos, spa con tratamientos relajantes, pileta, espacio al aire libre un
                 gimnasio de última generación con hidromasaje y sauna seco. Ademas de una exquisita oferta
                 gastronómica en nuestros dos restaurantes, donde se puede disfrutar de la mejor combinación de
-                comidas típicas y cocina de autor.</p>
+                comidas típicas y cocina de autor..</p>
         </section>
     </main>
     <footer class="footer">
