--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     <main>
         <!-- <div class="margen"></div> -->
         <section class="index">
-            <h1>el escondido el lujo de descansar</h1>
+            <h2>el escondido el lujo de descansar</h2>
             <div class="index__div--img"><img src="./Multimedia/Imagenes/index.jpg" alt="Hotel El Escondido"></div>
             <p class="index__p--prim"><b>El Escondido</b> es un hotel en la montaña, de diseño moderno y
                 elegante. Ubicado en Villa la
@@ -89,7 +89,7 @@
         </address>
         <form class="footer__form" action="">
             <label for="email">Suscribite a nuestro Newsletter</label>
-            <input class="form-control" type="email" name="email">
+            <input class="form-control" type="email" id="email" name="email">
             <input class="footer__form__button" type="submit" name="submit" value="">
         </form>
         <p class="footer__p footer__p--copy">© 2021 Hotel El Escondido, todos los derechos reservados.</p>
