--- a/pages/servicio.html
+++ b/pages/servicio.html
@@ -54,6 +54,7 @@
         <ul class="servicio__ul">
             <li class="servicio__ul__li">
                 <h3>Habitacion Simple</h3>
+                <img class="simple" src="../Multimedia/Imagenes/Servicios/Simple.jpg" alt="">
                 <div class="info">
                     <ul class="info__ul">
                         <li>30 mts2</li>
@@ -93,6 +94,7 @@
             </li>
             <li class="servicio__ul__li">
                 <h3>Habitacion Superior</h3>
+                <img class="superior" src="../Multimedia/Imagenes/Servicios/Superior.jpg" alt="">
                 <div class="info">
                     <ul class="info__ul">
                         <li>38 mts2</li>
@@ -132,6 +134,7 @@
             </li>
             <li class="servicio__ul__li">
                 <h3>Habitacion Superior king</h3>
+                <img class="simple" src="../Multimedia/Imagenes/Servicios/Superior-king.jpg" alt="">
                 <div class="info">
                     <ul class="info__ul">
                         <li>45 mts2</li>
