--- a/pages/servicio.html
+++ b/pages/servicio.html
@@ -263,15 +263,15 @@
         <p class="footer__p"><b>Hotel El Escondido</b></p>
         <address>
             <ul>
-                <li><b>Email:</b> attcliente@elescondido.com</li>
-                <li><b>Telefono:</b> 0294 449-5028</li>
-                <li><b>WhastsApp:</b> 294 6855342</li>
-                <li><b>Direccion:</b> Ruta 98 km 23, Villa la Angostura</li>
+                <li><b>Email:</b><a href=""> attcliente@elescondido.com</a></li>
+                <li><b>Telefono:</b><a href=""> 0294 449-5028</a></li>
+                <li><b>WhastsApp:</b><a href=""> 294 6855342</a></li>
+                <li><b>Direccion:</b>Ruta 98 km 23, Villa la Angostura</li>
             </ul>
         </address>
         <form class="footer__form" action="">
             <label for="email">Suscribite a nuestro Newsletter</label>
-            <input class="form-control" type="email" name="email">
+            <input class="form-control" type="email" id="email" name="email">
             <input class="footer__form__button" type="submit" name="submit" value="">
         </form>
         <p class="footer__p footer__p--copy">© 2021 Hotel El Escondido, todos los derechos reservados.</p>
