--- a/pages/servicio.html
+++ b/pages/servicio.html
@@ -49,7 +49,6 @@
       </nav>
   </header>
     <main>
-      <div class="margen"></div>
       <div class="servicio">
         <ul class="servicio__ul">
             <li class="servicio__ul__li">
@@ -134,7 +133,7 @@
             </li>
             <li class="servicio__ul__li">
                 <h3>Habitacion Superior king</h3>
-                <img class="simple" src="../Multimedia/Imagenes/Servicios/Superior-king.jpg" alt="">
+                <img class="king" src="../Multimedia/Imagenes/Servicios/Superior-king.jpg" alt="">
                 <div class="info">
                     <ul class="info__ul">
                         <li>45 mts2</li>
@@ -174,6 +173,7 @@
             </li>
             <li class="servicio__ul__li">
                 <h3>Suite junior</h3>
+                <img class="jr" src="../Multimedia/Imagenes/Servicios/Suite-jr.jpg" alt="">
                 <div class="info">
                     <ul class="info__ul">
                         <li>66 mts2</li>
@@ -211,8 +211,9 @@
                     </div>
                 </div>
             </li>
-            <li class="servicio__ul__li">
+            <li class="servicio__ul__li servicio__ul__li--suite">
                 <h3>Suite</h3>
+                <img src="../Multimedia/Imagenes/Servicios/Suite.jpg" alt="">
                 <div class="info">
                     <ul class="info__ul">
                         <li>120 mts2</li>
