--- a/pages/servicio.html
+++ b/pages/servicio.html
@@ -51,7 +51,7 @@
     <main>
       <div class="servicio">
         <ul class="servicio__ul">
-            <li class="servicio__ul__li">
+          <div class="simple"><li class="servicio__ul__li">
                 <h3>Habitacion Simple</h3>
                 <img class="simple" src="../Multimedia/Imagenes/Servicios/Simple.jpg" alt="">
                 <div class="info">
@@ -90,8 +90,8 @@
                         </button>
                       </div>
                 </div>
-            </li>
-            <li class="servicio__ul__li">
+            </li></div>
+            <div class="superior"><li class="servicio__ul__li">
                 <h3>Habitacion Superior</h3>
                 <img class="superior" src="../Multimedia/Imagenes/Servicios/Superior.jpg" alt="">
                 <div class="info">
@@ -130,8 +130,8 @@
                         </button>
                       </div>
                 </div>
-            </li>
-            <li class="servicio__ul__li">
+            </li></div>
+            <div class="king"><li class="servicio__ul__li">
                 <h3>Habitacion Superior king</h3>
                 <img class="king" src="../Multimedia/Imagenes/Servicios/Superior-king.jpg" alt="">
                 <div class="info">
@@ -170,8 +170,8 @@
                         </button>
                       </div>
                 </div>
-            </li>
-            <li class="servicio__ul__li">
+            </li></div>
+            <div class="jr"><li class="servicio__ul__li">
                 <h3>Suite junior</h3>
                 <img class="jr" src="../Multimedia/Imagenes/Servicios/Suite-jr.jpg" alt="">
                 <div class="info">
@@ -210,8 +210,8 @@
                       </button>
                     </div>
                 </div>
-            </li>
-            <li class="servicio__ul__li servicio__ul__li--suite">
+            </li></div>
+            <div class="suite"><li class="servicio__ul__li servicio__ul__li--suite">
                 <h3>Suite</h3>
                 <img src="../Multimedia/Imagenes/Servicios/Suite.jpg" alt="">
                 <div class="info">
@@ -250,7 +250,7 @@
                         </button>
                       </div>
                 </div>
-            </li>
+            </li></div>
         </ul>
       </div>
     </main>
