--- a/index.html
+++ b/index.html
@@ -52,8 +52,10 @@
     </header>
     <main>
         <section class="index">
-            <h2>el escondido el lujo de descansar</h2>
-            <div class="index__div--img"><img src="./Multimedia/Imagenes/index.jpg" alt="Hotel El Escondido"></div>
+            <div class="index__div--img">
+                <img src="./Multimedia/Imagenes/index.jpg" alt="Hotel El Escondido">
+                <h2>el escondido el lujo de descansar</h2>
+            </div>
             <p class="index__p--prim"><b>El Escondido</b> es un hotel en la montaña, de diseño moderno y
                 elegante. Ubicado en Villa la
                 Angostura, es el lugar perfecto para parejas y familias que buscan descansar en una tierra
