--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -63,15 +63,15 @@
             <section>
                 <form action="" class="contacto__form">
                     <label for="nombre">Nombre</label>
-                    <input class="form-control" type="text" name="nombre">
+                    <input class="form-control" type="text" name="nombre" id="nombre">
                     <label for="apellido">Apellido</label>
-                    <input class="form-control" type="text" name="apellido">
+                    <input class="form-control" type="text" name="apellido" id="apellido">
                     <label for="email">Email</label>
-                    <input class="form-control" type="email" name="email">
+                    <input class="form-control" type="email" name="email" id="email">
                     <label for="telefono">Telefono</label>
-                    <input class="form-control" type="number" name="telefono">
+                    <input class="form-control" type="number" name="telefono" id="telefono">
                     <label for="comentario">Comentario</label>
-                    <textarea class="form-control" name="comentario" cols="30" rows="7"></textarea>
+                    <textarea class="form-control" name="comentario" cols="30" rows="7" id="comentario"></textarea>
                     <div><input class="btn btn-outline-success" type="submit" value="Enviar"></div>
                 </form>
             </section>
@@ -100,9 +100,9 @@
             </ul>
         </address>
         <form class="footer__form" action="">
-            <label for="email">Suscribite a nuestro Newsletter</label>
-            <input class="form-control" type="email" id="email" name="email">
-            <input class="footer__form__button" type="submit" name="submit" value="">
+            <label for="newsletter">Suscribite a nuestro Newsletter</label>
+            <input class="form-control" type="email" id="newsletter" name="email">
+            <input class="footer__form__button" type="image" src="../Multimedia/Imagenes/iconos/enviar.png" name="submit" value="">
         </form>
         <p class="footer__p footer__p--copy">© 2021 Hotel El Escondido, todos los derechos reservados.</p>
     </footer>
