--- a/pages/servicio.html
+++ b/pages/servicio.html
@@ -273,7 +273,7 @@
         <form class="footer__form" action="">
             <label for="email">Suscribite a nuestro Newsletter</label>
             <input class="form-control" type="email" id="email" name="email">
-            <input class="footer__form__button" type="submit" name="submit" value="">
+            <input class="footer__form__button" type="image" src="../Multimedia/Imagenes/iconos/enviar.png" name="submit" value="">
         </form>
         <p class="footer__p footer__p--copy">© 2021 Hotel El Escondido, todos los derechos reservados.</p>
     </footer>
