--- a/pages/servicio.html
+++ b/pages/servicio.html
@@ -100,7 +100,7 @@
                         <li>Terraza conectada a la piscina</li>
                         <li>Smart tv de 42"</li>
                         <li>Baño con bañera</li>
-                        <li>Altavoz y reloj despertador Bluetooth</li>carouselExampleControls
+                        <li>Altavoz y reloj despertador Bluetooth</li>
                         <li>Sofá cama</li>
                     </ul>
                     <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
