--- a/pages/reservas.html
+++ b/pages/reservas.html
@@ -10,7 +10,7 @@
     <meta name="description" content="El escondido es un hotel de lujo dentro de un valle lleno de naturaleza, ideal para tu descanso">
     <meta name="keywords" content="hotel, montaña, descanso, turismo, gym, gimnasio, chef, comida de autor">
     <!-- Icono -->
-    <link rel="icon" href="../Multimedia/Imagenes/iconos/El escondido2.png">
+    <link rel="icon" href="../Multimedia/Imagenes/iconos/logo--nuevo.png">
     <!-- Titulo -->
     <title>Hotel El escondido | Reserva</title>
     <!-- Google Fonts -->
