--- a/pages/404.html
+++ b/pages/404.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Icono -->
-    <link rel="icon" href="../Multimedia/Imagenes/iconos/El escondido2.png">
+    <link rel="icon" href="../Multimedia/Imagenes/iconos/logo--nuevo.png">
     <!-- Titulo -->
     <title>Hotel El Escondido | Error</title>
     <!-- Google Fonts -->
@@ -50,8 +50,8 @@
             <div class="margen"></div>
             <h1 class="error__h1">Uuups!! Esta pagina no pudo ser encontrada</h1>
             <h4 class="error__sub1">Le pedimos disculpas por las molestias</h4>
-            <h4 class="error__sub2">De todas formas puede elegir otra pagina en nuestra web</h4>
-            <img class="error__img" src="Multimedia/Imagenes/galeria/Casa-S-2.jpg" alt="Hotel El Escondido">
+            <h4 class="error__sub2">De todas formas puede elegir otra pagina de nuestra web</h4>
+            <img class="error__img" src="../Multimedia/Imagenes/galeria/Casa-S-2.jpg" alt="Hotel El Escondido">
         </div>
     </main>
     <footer class="footer">
