--- a/index.html
+++ b/index.html
@@ -69,23 +69,17 @@
                 pong y salón para eventos, spa con tratamientos relajantes, pileta, espacio al aire libre un
                 gimnasio de última generación con hidromasaje y sauna seco. Ademas de una exquisita oferta
                 gastronómica en nuestros dos restaurantes, donde se puede disfrutar de la mejor combinación de
-                comidas típicas y cocina de autor..</p>
+                comidas típicas y cocina de autor.</p>
         </section>
     </main>
     <footer class="footer">
-        <ul class="footer__ul">
-            <li><a href="facebook.com/inicio"><img src="./Multimedia/Imagenes/iconos/logo-de-face.png" alt=""></a></li>
-            <li><a href="instagram.com/inicio"><img src="./Multimedia/Imagenes/iconos/insta.png" alt=""></a></li>
-            <li><a href="twitter.com/inicio"><img src="./Multimedia/Imagenes/iconos/twit.png" alt=""></a></li>
-            <li><a href="whattsapp.com.inicio"><img src="./Multimedia/Imagenes/iconos/whatts.png" alt=""></a></li>
-        </ul>
         <p class="footer__p"><b>Hotel El Escondido</b></p>
         <address>
             <ul>
-                <li><b>Email:</b><a href=""> attcliente@elescondido.com</a></li>
-                <li><b>Telefono:</b><a href=""> 0294 449-5028</a></li>
-                <li><b>WhastsApp:</b><a href=""> 294 6855342</a></li>
-                <li><b>Direccion:</b>Ruta 98 km 23, Villa la Angostura</li>
+                <li><b>Email:</b><a href="mailto:maxicoronel1992@gmail.com" target="_blank"> attcliente@elescondido.com</a></li>
+                <li><b>Telefono:</b><a href="tel:+543564699955"> 0294 449-5028</a></li>
+                <li><b>WhastsApp:</b><a href="https://api.whatsapp.com/send?phone=+543564699955" target="_blank"> 294 6855342</a></li>
+                <li><b>Direccion:</b><a href="https://goo.gl/maps/4t1LGvfMeop1afqa7" target="_blank"> Ruta 98 km 23, Villa la Angostura</a></li>
             </ul>
         </address>
         <form class="footer__form" action="">
@@ -93,6 +87,12 @@
             <input class="form-control" type="email" id="email" name="email">
             <input class="footer__form__button" type="image" src="./Multimedia/Imagenes/iconos/enviar.png" name="submit" value="">
         </form>
+        <ul class="footer__ul">
+            <li><a href="https://www.facebook.com/maxi.cmj/" target="_blank"><img src="./Multimedia/Imagenes/iconos/logo-de-face.png" alt=""></a></li>
+            <li><a href="https://www.instagram.com/maxi__coronel/?hl=es" target="_blank"><img src="./Multimedia/Imagenes/iconos/insta.png" alt=""></a></li>
+            <li><a href="https://twitter.com/?lang=es" target="_blank"><img src="./Multimedia/Imagenes/iconos/twit.png" alt=""></a></li>
+            <li><a href="https://api.whatsapp.com/send?phone=+543564699955" target="_blank"><img src="./Multimedia/Imagenes/iconos/whatts.png" alt=""></a></li>
+        </ul>
         <p class="footer__p footer__p--copy">© 2021 Hotel El Escondido, todos los derechos reservados.</p>
     </footer>
     <!-- JavaScript Bundle with Popper -->
