--- a/pages/reservas.html
+++ b/pages/reservas.html
@@ -61,22 +61,22 @@
               <div class="carousel-item active">
                 <img src="../Multimedia/Imagenes/reserva/lago.jpg" class="d-block w-100" alt="...">
                 <div class="carousel-caption d-none d-md-block">
-                  <h5>First slide label</h5>
-                  <p>Some representative placeholder content for the first slide.</p>
+                  <h5>tu felicidad</h5>
+                  <p>depende de un buen DESAYUNO</p>
                 </div>
               </div>
               <div class="carousel-item">
                 <img src="../Multimedia/Imagenes/reserva/naturaleza-1.jpg" class="d-block w-100" alt="...">
                 <div class="carousel-caption d-none d-md-block">
-                  <h5>Second slide label</h5>
-                  <p>Some representative placeholder content for the second slide.</p>
+                  <h5>la felicidad es</h5>
+                  <p>NATURALEZA, BELLEZA Y TRANQUILIDAD juntas</p>
                 </div>
               </div>
               <div class="carousel-item">
                 <img src="../Multimedia/Imagenes/reserva/copa-vino.jpg" class="d-block w-100" alt="...">
                 <div class="carousel-caption d-none d-md-block">
-                  <h5>Third slide label</h5>
-                  <p>Some representative placeholder content for the third slide.</p>
+                  <h5>no aseguramos tu felicidad</h5>
+                  <p>pero si podemos asegurar un buen VINO que es lo mismo</p>
                 </div>
               </div>
             </div>
