--- a/index.html
+++ b/index.html
@@ -57,8 +57,7 @@
                 <h2>el escondido el lujo de descansar</h2>
             </div>
             <p class="index__p--prim"><b>El Escondido</b> es un hotel en la montaña, de diseño moderno y
-                elegante. Ubicado en Villa la
-                Angostura, es el lugar perfecto para parejas y familias que buscan descansar en una tierra
+                elegante. Ubicado en Villa la Angostura, es el lugar perfecto para parejas y familias que buscan descansar en una tierra
                 misteriosa y mágica, con comodidad y servicio de excelencia. Nuestros espacios están diseñados para
                 vivir una experiencia única tanto en amplias y cómodas habitaciones como en nuestras suites de lujo.
             </p>
