--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="El escondido es un hotel de lujo dentro de un valle lleno de naturaleza, ideal para tu descanso">
-    <meta name="keywords" content="hotel, montaña, descanso, turismo, gym, gimnasio, chef, comida de autor">
+    <meta name="keywords" content="hotel, naturaleza, 5estrellas, montaña, descanso, turismo, gym, gimnasio, chef, comida de autor">
     <!-- Icono -->
     <link rel="icon" href="./Multimedia/Imagenes/iconos/logo--nuevo.png">
     <!-- Titulo -->
