--- a/pages/galeria.html
+++ b/pages/galeria.html
@@ -15,6 +15,10 @@
     <title>Hotel El escondido | Galeria</title>
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Asap:wght@400;500;600;700&family=Flamenco:wght@300;400&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed:300,400&amp;display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Raleway:700,800&amp;display=swap" rel="stylesheet">
+    <!-- CSS AOS -->
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <!-- CSS only -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
     <!--  Mi css Original! -->
@@ -81,28 +85,31 @@
             </div>
         </main>
         <footer class="footer">
-            <ul class="footer__ul">
-                <li><a href="facebook.com/inicio"><img src="../Multimedia/Imagenes/iconos/logo-de-face.png" alt=""></a></li>
-                <li><a href="instagram.com/inicio"><img src="../Multimedia/Imagenes/iconos/insta.png" alt=""></a></li>
-                <li><a href="twitter.com/inicio"><img src="../Multimedia/Imagenes/iconos/twit.png" alt=""></a></li>
-                <li><a href="whattsapp.com.inicio"><img src="../Multimedia/Imagenes/iconos/whatts.png" alt=""></a></li>
-            </ul>
-            <p class="footer__p"><b>Hotel El Escondido</b></p>
-            <address>
+            <p class="footer__p" data-aos="fade-right"><b>Hotel El Escondido</b></p>
+            <address data-aos="fade-right">
                 <ul>
-                    <li><b>Email:</b><a href=""> attcliente@elescondido.com</a></li>
-                    <li><b>Telefono:</b><a href=""> 0294 449-5028</a></li>
-                    <li><b>WhastsApp:</b><a href=""> 294 6855342</a></li>
-                    <li><b>Direccion:</b>Ruta 98 km 23, Villa la Angostura</li>
+                    <li><b>Email:</b><a href="mailto:maxicoronel1992@gmail.com" target="_blank"> attcliente@elescondido.com</a></li>
+                    <li><b>Telefono:</b><a href="tel:+543564699955"> 0294 449-5028</a></li>
+                    <li><b>WhastsApp:</b><a href="https://api.whatsapp.com/send?phone=+543564699955" target="_blank"> 294 6855342</a></li>
+                    <li><b>Direccion:</b><a href="https://goo.gl/maps/4t1LGvfMeop1afqa7" target="_blank"> Ruta 98 km 23, Villa la Angostura</a></li>
                 </ul>
             </address>
-            <form class="footer__form" action="">
+            <form class="footer__form" action="" data-aos="flip-left">
                 <label for="email">Suscribite a nuestro Newsletter</label>
                 <input class="form-control" type="email" id="email" name="email">
                 <input class="footer__form__button" type="image" src="../Multimedia/Imagenes/iconos/enviar.png" name="submit" value="">
             </form>
+            <ul class="footer__ul" data-aos="flip-left">
+                <li><a href="https://www.facebook.com/maxi.cmj/" target="_blank"><img src="../Multimedia/Imagenes/iconos/logo-de-face.png" alt=""></a></li>
+                <li><a href="https://www.instagram.com/maxi__coronel/?hl=es" target="_blank"><img src="../Multimedia/Imagenes/iconos/insta.png" alt=""></a></li>
+                <li><a href="https://twitter.com/?lang=es" target="_blank"><img src="../Multimedia/Imagenes/iconos/twit.png" alt=""></a></li>
+                <li><a href="https://api.whatsapp.com/send?phone=+543564699955" target="_blank"><img src="../Multimedia/Imagenes/iconos/whatts.png" alt=""></a></li>
+            </ul>
             <p class="footer__p footer__p--copy">© 2021 Hotel El Escondido, todos los derechos reservados.</p>
         </footer>
+        <!-- JavaScript AOS -->
+        <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+        <script>AOS.init();</script>
         <!-- JavaScript Bundle with Popper -->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js" integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0" crossorigin="anonymous"></script>
 </body>
