--- a/pages/servicio.html
+++ b/pages/servicio.html
@@ -53,6 +53,118 @@
       </nav>
   </header>
     <main>
+      <div class="accordion" id="accordionExample">
+        <div class="accordion-item">
+          <h2 class="accordion-header" id="headingOne">
+            <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+              Habitacion Simple
+            </button>
+          </h2>
+          <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
+            <div class="accordion-body">
+              <img class="simple" src="../Multimedia/Imagenes/Servicios/Simple.jpg" alt="">
+              <div class="info">
+                  <ul class="info__ul">
+                      <li>30 mts2</li>
+                      <li>Terraza o balcon</li>
+                      <li>Smart tv de 42 pulgadas</li>
+                      <li>Minibar</li>
+                      <li>Baño con bañera y ducha a ras del piso</li>
+                      <li>Altavoz y reloj despertador Bluetooth</li>
+                  </ul>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="accordion-item">
+          <h2 class="accordion-header" id="headingTwo">
+            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+              Habitacion Superior 
+            </button>
+          </h2>
+          <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#accordionExample">
+            <div class="accordion-body">
+              <img class="superior" src="../Multimedia/Imagenes/Servicios/Superior.jpg" alt="">
+              <div class="info">
+                  <ul class="info__ul">
+                      <li>38 mts2</li>
+                      <li>Terraza conectada a la piscina</li>
+                      <li>Smart tv de 42"</li>
+                      <li>Baño con bañera</li>
+                      <li>Altavoz y reloj despertador Bluetooth</li>
+                      <li>Sofá cama</li>
+                  </ul>
+            </div>
+          </div>
+        </div>
+        <div class="accordion-item">
+          <h2 class="accordion-header" id="headingThree">
+            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+              Habitacion Superior king
+            </button>
+          </h2>
+          <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#accordionExample">
+            <div class="accordion-body">
+              <img class="king" src="../Multimedia/Imagenes/Servicios/Superior-king.jpg" alt="">
+              <div class="info">
+                  <ul class="info__ul">
+                      <li>45 mts2</li>
+                      <li>Terraza conectada a la piscina</li>
+                      <li>Smart tv de 42"</li>
+                      <li>Baño con bañera y ducha a ras del piso</li>
+                      <li>Área de trabajo</li>
+                      <li>Minibar</li>
+                  </ul>
+            </div>
+          </div>
+        </div>
+        <div class="accordion-item">
+          <h2 class="accordion-header" id="headingFour">
+            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseFour" aria-expanded="false" aria-controls="collapseThree">
+              Suite junior
+            </button>
+          </h2>
+          <div id="collapseFour" class="accordion-collapse collapse" aria-labelledby="headingFour" data-bs-parent="#accordionExample">
+            <div class="accordion-body">
+              <img class="jr" src="../Multimedia/Imagenes/Servicios/Suite-jr.jpg" alt="">
+              <div class="info">
+                  <ul class="info__ul">
+                      <li>66 mts2</li>
+                      <li>Patio</li>
+                      <li>Despensa independiente</li>
+                      <li>Smart tv de 65" y led de 55"</li>
+                      <li>Desayuno continental y refrescos todo el día</li>
+                      <li>Masaje de 60 min para 1 persona por noche</li>
+                  </ul>
+            </div>
+          </div>
+        </div>
+        <div class="accordion-item">
+          <h2 class="accordion-header" id="headingFive">
+            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseFive" aria-expanded="false" aria-controls="collapseThree">
+              Suite
+            </button>
+          </h2>
+          <div id="collapseFive" class="accordion-collapse collapse" aria-labelledby="headingFive" data-bs-parent="#accordionExample">
+            <div class="accordion-body">
+              <img src="../Multimedia/Imagenes/Servicios/Suite.jpg" alt="">
+              <div class="info">
+                  <ul class="info__ul">
+                      <li>120 mts2</li>
+                      <li>Balcón o solárium</li>
+                      <li>Despensa independiente</li>
+                      <li>Smart tv de 65" y led de 55"</li>
+                      <li>Desayuno continental y refrescos todo el día</li>
+                      <li>Masaje de 60 min para 1 persona por noche</li>
+                  </ul>
+            </div>
+          </div>
+        </div>
+      </div>
+        </div>
+        </div>
+        </div>
+      </div>
       <div class="servicio">
         <ul class="servicio__ul">
           <div class="simple">
