--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -99,14 +99,14 @@
         </address>
         <form class="footer__form" action="" data-aos="flip-left">
             <label for="email">Suscribite a nuestro Newsletter</label>
-            <input class="form-control" type="email" id="email" name="email">
+            <input class="form-control" type="email" id="email" name="email" required>
             <input class="footer__form__button" type="image" src="../Multimedia/Imagenes/iconos/enviar.png" name="submit" value="">
         </form>
         <ul class="footer__ul" data-aos="flip-left">
-            <li><a href="https://www.facebook.com/maxi.cmj/" target="_blank"><img src="../Multimedia/Imagenes/iconos/logo-de-face.png" alt=""></a></li>
-            <li><a href="https://www.instagram.com/maxi__coronel/?hl=es" target="_blank"><img src="../Multimedia/Imagenes/iconos/insta.png" alt=""></a></li>
-            <li><a href="https://twitter.com/?lang=es" target="_blank"><img src="../Multimedia/Imagenes/iconos/twit.png" alt=""></a></li>
-            <li><a href="https://api.whatsapp.com/send?phone=+543564699955" target="_blank"><img src="../Multimedia/Imagenes/iconos/whatts.png" alt=""></a></li>
+            <li><a href="https://www.facebook.com/maxi.cmj/" target="_blank"><img src="../Multimedia/Imagenes/iconos/face.png" alt="logo_facebook"></a></li>
+            <li><a href="https://www.instagram.com/maxi__coronel/?hl=es" target="_blank"><img src="../Multimedia/Imagenes/iconos/insta.png" alt="logo_instagram"></a></li>
+            <li><a href="https://twitter.com/?lang=es" target="_blank"><img src="../Multimedia/Imagenes/iconos/twitter.png" alt="logo_twitter"></a></li>
+            <li><a href="https://api.whatsapp.com/send?phone=+543564699955" target="_blank"><img src="../Multimedia/Imagenes/iconos/whats.png" alt="logo_whatsapp"></a></li>
         </ul>
         <p class="footer__p footer__p--copy">© 2021 Hotel El Escondido, todos los derechos reservados.</p>
     </footer>
